@@ -1,5 +1,11 @@
 2006-02-17  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* lily/beam.cc (get_default_dir): take extreme note head as input
+	for stem direction.
+
+	* lily/tie.cc (get_default_dir): only look directions for visible
+	stems. 
+
 	* lily/side-position-interface.cc (aligned_side): oops. Don't
 	mutiply with direction. This fixes quantized (staccato, tenuto)
 	scripts below notes.
